--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+server.port=8081
 
+
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:db2://localhost:50000/testdb
+spring.datasource.username=db2inst1
+spring.datasource.password=password
+
+
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle=true
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
