--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 
 
 
@@ -26,4 +26,4 @@ spring.datasource.testWhileIdle=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
 
 
-spring.jpa.hibernate.ddl-auto: update
+spring.jpa.hibernate.ddl-auto: create
