write database output to flat file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.datasource.testWhileIdle=true
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
 
-
-spring.jpa.hibernate.ddl-auto: create
+#Hibernate set to add new changes to schema upon restart but does not remove previous schema changes
+spring.jpa.hibernate.ddl-auto: update
