--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-	mavenCentral()
+	gradlePluginPortal()
+	maven { url = "https://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
@@ -17,16 +18,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.ibm.db2:jcc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	compileOnly 'org.projectlombok:lombok'
-//	annotationProcessor 'org.projectlombok:lombok'
+// https://mavenlibs.com/maven/dependency/com.hierynomus/sshj
+//	implementation group: 'com.hierynomus', name: 'sshj', version: '0.33.0'
+//	compileOnly 'org.projectlombok:lombok:1.18.24'
+//	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+//
+//	testCompileOnly 'org.projectlombok:lombok:1.18.24'
+//	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 //	implementation 'org.projectlombok:lombok'
+//	implementation 'org.projectlombok:lombok'
+//	implementation 'org.projectlombok:lombok'
+
+	// https://mavenlibs.com/maven/dependency/com.jcraft/jsch
+	// https://mavenlibs.com/maven/dependency/com.jcraft/jsch
+//	implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+
 }
 
-//configurations {
-//	compileOnly {
-//		extendsFrom annotationProcessor
-//	}
-//}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
