--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,17 +1,15 @@
-#distributionBase=GRADLE_USER_HOME
-#distributionPath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-7.4.1-bin.zip
-#zipStoreBase=GRADLE_USER_HOME
-#zipStorePath=wrapper/dists
-#
-#distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.3-all.zip
+#Wed Jul 20 14:04:59 WAT 2022
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4.1-all.zip
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+
+#distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-all.zip
 #distributionBase=GRADLE_USER_HOME
 #distributionPath=wrapper/dists
 #zipStorePath=wrapper/dists
 #zipStoreBase=GRADLE_USER_HOME
 
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-all.zip
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
+org.gradle.logging.level=debug
+org.gradle.caching=false
