design pattern change

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.ibm.db2:jcc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.konghq:unirest-java:3.11.09'
-	implementation 'com.konghq:unirest-java:3.11.09:standalone'
+//	implementation 'com.konghq:unirest-java:3.11.09'
+//	implementation 'com.konghq:unirest-java:3.11.09:standalone'
 
 // https://mavenlibs.com/maven/dependency/com.hierynomus/sshj
 //	implementation group: 'com.hierynomus', name: 'sshj', version: '0.33.0'
